docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__AttainmentPlanRowDetail__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AttainmentPlanRow__c</fullName>
        <label>Attainment Plan Row</label>
        <referenceTo>sfsp__AttainmentPlanRow__c</referenceTo>
        <relationshipLabel>Attainment Plan Row Details</relationshipLabel>
        <relationshipName>AttainmentPlanRowDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfsp__Attainment_Month10__c</fullName>
        <label>Attainment Month 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Attainment_Month11__c</fullName>
        <label>Attainment Month 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Attainment_Month12__c</fullName>
        <label>Attainment Month 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__IsCustomDetailRow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Detail Row</label>
        <type>Checkbox</type>
    </fields>
    <label>Attainment Plan Row Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attainment Plan Row Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>